[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scenes/Scripts/CameraParallax.tres.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Player/Run0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Run1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Run2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Run3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Run4.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Run7.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Jump0.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Jump1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/Jump3.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/Jump4.png" type="Texture" id=12]
[ext_resource path="res://Samples/BounceYoFrankie.ogg" type="AudioStream" id=13]
[ext_resource path="res://Sprites/background.jpg" type="Texture" id=14]
[ext_resource path="res://Sprites/ground#1.png" type="Texture" id=15]
[ext_resource path="res://Scenes/TntSpawner.tscn" type="PackedScene" id=16]
[ext_resource path="res://Samples/Happy-walk.ogg" type="AudioStream" id=17]
[ext_resource path="res://Scenes/PortalSpawner.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/Scripts/Pause.gd" type="Script" id=19]
[ext_resource path="res://Sprites/Buttons/Resume001.PNG" type="Texture" id=20]
[ext_resource path="res://Sprites/Buttons/Resume002.PNG" type="Texture" id=21]
[ext_resource path="res://Sprites/Buttons/Menu001.PNG" type="Texture" id=22]
[ext_resource path="res://Sprites/Buttons/Menu002.PNG" type="Texture" id=23]
[ext_resource path="res://Sprites/Buttons/Quit001.PNG" type="Texture" id=24]
[ext_resource path="res://Sprites/Buttons/Quit002.PNG" type="Texture" id=25]
[ext_resource path="res://Sprites/Pause Menu.PNG" type="Texture" id=26]
[ext_resource path="res://Sprites/Buttons/PauseButton0001.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Buttons/PauseButton0002.png" type="Texture" id=28]
[ext_resource path="res://Scenes/BirdSpanew.tscn" type="PackedScene" id=29]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 20.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.5216, 30.0752 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.4535, 26.5677 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1212.48, 44.7247 )

[node name="Word" type="CanvasLayer"]

[node name="Camera" type="Camera2D" parent="."]
editor/display_folded = true
anchor_mode = 0
current = true
script = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="Camera"]
position = Vector2( 96, 160 )
z_index = 500
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerSprite" type="AnimatedSprite" parent="Camera/Player"]
frames = SubResource( 1 )
animation = "Idle"
frame = 3

[node name="ShapePlayer" type="CollisionShape2D" parent="Camera/Player"]
visible = false
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Camera/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera/Player/Area2D"]
shape = SubResource( 3 )

[node name="Jump" type="AudioStreamPlayer" parent="Camera/Player"]
stream = ExtResource( 13 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="ParallaxLayerBackGround" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 0.598755, 0 )
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 1024, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayerBackGround"]
position = Vector2( 513.263, 280.835 )
scale = Vector2( 2.00402, 1.10193 )
texture = ExtResource( 14 )

[node name="ParallaxLayerGround" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 0 )

[node name="Ground" type="StaticBody2D" parent="ParallaxBackground/ParallaxLayerGround"]
position = Vector2( 512, 448 )
scale = Vector2( 0.5, 0.3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayerGround/Ground"]
position = Vector2( 0, 23.3334 )
scale = Vector2( 1, 0.936198 )
texture = ExtResource( 15 )

[node name="ShapeGround" type="CollisionShape2D" parent="ParallaxBackground/ParallaxLayerGround/Ground"]
position = Vector2( 6.73889, 461.742 )
shape = SubResource( 4 )

[node name="TntSpawner" parent="." instance=ExtResource( 16 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
autoplay = true

[node name="PortalSpawner" parent="." instance=ExtResource( 18 )]

[node name="Node" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 128

[node name="Pause" type="Control" parent="Node"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 19 )

[node name="BlackOverlay" type="ColorRect" parent="Node/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.423529 )

[node name="PauseMenu" type="ColorRect" parent="Node/Pause"]
margin_left = 202.896
margin_top = 86.3388
margin_right = 782.896
margin_bottom = 482.339
color = Color( 0.168627, 0.164706, 0.164706, 1 )

[node name="ResumeButton" type="TextureButton" parent="Node/Pause/PauseMenu"]
margin_left = 166.279
margin_top = 102.136
margin_right = 391.279
margin_bottom = 171.136
texture_normal = ExtResource( 20 )
texture_hover = ExtResource( 21 )

[node name="MenuButton" type="TextureButton" parent="Node/Pause/PauseMenu"]
margin_left = 166.541
margin_top = 193.772
margin_right = 391.541
margin_bottom = 262.772
texture_normal = ExtResource( 22 )
texture_hover = ExtResource( 23 )

[node name="QuitButton" type="TextureButton" parent="Node/Pause/PauseMenu"]
margin_left = 166.973
margin_top = 284.123
margin_right = 391.973
margin_bottom = 353.123
texture_normal = ExtResource( 24 )
texture_hover = ExtResource( 25 )

[node name="Sprite" type="Sprite" parent="Node/Pause/PauseMenu"]
modulate = Color( 0.686275, 0.752941, 0.94902, 1 )
position = Vector2( 283.963, 50.1191 )
scale = Vector2( 0.736984, 0.736984 )
texture = ExtResource( 26 )

[node name="PauseButton" type="TextureButton" parent="."]
margin_left = 512.0
margin_top = 2.864
margin_right = 928.0
margin_bottom = 514.864
rect_scale = Vector2( 0.05, 0.05 )
texture_normal = ExtResource( 27 )
texture_hover = ExtResource( 28 )

[node name="BirdSpanew" parent="." instance=ExtResource( 29 )]
[connection signal="area_shape_entered" from="Camera/Player/Area2D" to="Camera/Player" method="_on_Area2D_area_shape_entered"]
[connection signal="pressed" from="Node/Pause/PauseMenu/ResumeButton" to="Node/Pause" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Node/Pause/PauseMenu/MenuButton" to="Node/Pause" method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Node/Pause/PauseMenu/QuitButton" to="Node/Pause" method="_on_QuitButton_pressed"]
[connection signal="pressed" from="PauseButton" to="Node/Pause" method="_on_PauseButton_pressed"]
